vlib/v/scanner/tests/string_interpolation_missing_rcbr_err.vv
module main

fn main() {
    broken := '${foo()' + '${bar})'
    _ = '\t${broken}'
}
